--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "cSpell.words": ["Aderbal", "Danilo", "Pêra"]
+  "cSpell.words": [
+    "Aderbal",
+    "codigo",
+    "Danilo",
+    "Pêra",
+    "preco",
+    "Registradora"
+  ]
 }
